roles/app-web/files/deployment.yml
# Reference: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
# Setup Deployment Manifest

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-label
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-label
    spec:
      containers:
      - name: nginx
        image: nginx:1.28.3-alpine
        ports:
        - containerPort: 80
