roles/app-web/files/service.yml
# Reference: https://kubernetes.io/docs/concepts/services-networking/service/
# Setup Service Manifest

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: web
spec:
  selector:
    app.kubernetes.io/name: nginx-label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
