roles/app-web/files/ingress.yml
# Reference: https://kubernetes.io/docs/concepts/services-networking/ingress/
# Setup Ingress Manifest
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: web
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
